--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ EventDrops/
 coding_practice_using_JS/.idea/workspace.xml
 
 coding_practice_using_JS/.idea/workspace.xml
+
+coding_practice_JS/.idea/.name
+
+coding_practice_JS/.idea/coding_practice_JS.iml
+
+coding_practice_JS/.idea/misc.xml
+
+coding_practice_JS/.idea/modules.xml
+
+coding_practice_JS/.idea/vcs.xml
+
+coding_practice_JS/.idea/workspace.xml
