--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ coding_practice_JS/.idea/modules.xml
 coding_practice_JS/.idea/vcs.xml
 
 coding_practice_JS/.idea/workspace.xml
+
+demo/.idea/workspace.xml
